--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ airflow/webserver_config.py
 airflow/dags/__pycache__/
 airflow/dags/modules/__pycache__/
 airflow/dags/modules/try.py
+backend/try.py
