--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,18 +8,13 @@ package-mode = false
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
+python-dotenv = "^1.0.1"
 fastapi = "^0.115.3"
 uvicorn = "^0.32.0"
 nvidia-ml-py3 = "^7.352.0"
 boto3 = "^1.35.49"
-torch = "^2.5.0"
 pinecone-client = "^5.0.1"
-langchain-nvidia-ai-endpoints = "^0.3.3"
 llama-index = "0.11.20"
-langchain = "^0.3.4"
-pymilvus = "^2.4.9"
-uuid = "^1.30"
-llama-index-vector-stores-milvus = "^0.2.7"
 llama-index-embeddings-nvidia = "^0.2.4"
 llama-index-llms-nvidia = "^0.2.6"
 llama-index-vector-stores-pinecone = "^0.2.1"
