--- a/frontend/pyproject.toml
+++ b/frontend/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 python = "^3.10"
 streamlit = "^1.39.0"
 requests = "^2.32.3"
-python-dotenv = "^0.21.0"    # Dotenv 依赖
+python-dotenv = "^0.21.0" 
+boto3 = "^1.35.49"
 
 
 [build-system]
