--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ llama-index-embeddings-nvidia = "^0.2.4"
 llama-index-llms-nvidia = "^0.2.6"
 llama-index-vector-stores-pinecone = "^0.2.1"
 pypdf2 = "^3.0.1"
+snowflake-connector-python = "^3.12.3"
 
 [build-system]
 requires = ["poetry-core"]
